src/components/Header/NavigationList/NavigationList.module.scss
.navigation {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  font-size: 1.2rem;
  font-weight: 700;
  gap: 1.5rem;

  @media (max-width: 1100px) {
    margin-bottom: 2vw;
  }

  @media (max-width: 800px) {
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
    gap: 0;
  }
}

.innerWrapper {
  width: 100%;
  display: flex;
  flex-direction: row;
  gap: 1.5rem;
  overflow: hidden;

  @media (max-width: 800px) {
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
    gap: 0;

    li {
      width: 100%;
      flex-grow: 1;
    }
  }
}

.navList {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  list-style: none;

  a {
    width: 100%;
    flex-grow: 1;
  }

  @media (max-width: 800px) {
    width: 100%;
    flex-direction: column;
  }
}

.handleMenuBtn {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
  margin-left: auto;
  margin-top: 10px;
  padding: 0.6rem 2rem;
  z-index: 2;
  cursor: pointer;
}

.hamburger,
.hamburgerOpen {
  position: relative;
  width: 25px;
  height: 2px;
  background-color: var(--black);
  transition: all 0.2s ease-in-out;

  &::before {
    position: absolute;
    top: -5px;
    left: 0;
    content: "";
    width: 100%;
    height: 2px;
    transition: all 0.2s ease-in-out;
    background-color: var(--black);
  }

  &::after {
    position: absolute;
    top: 5px;
    left: 0;
    content: "";
    width: 100%;
    height: 2px;
    transition: all 0.2s ease-in-out;
    background-color: var(--black);
  }
}

.hamburgerOpen {
  transform: rotate(-45deg);
  &::before {
    transform: translate(0px, 5px) rotate(90deg);
  }
  &::after {
    transform: translate(0px, -5px);
  }
}

